--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payoo MFS App | Mobile banking</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5.0.0-beta.8/daisyui.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
+
+<body class="bg-slate-800">
+    <section class="max-w-md min-h-screen mx-auto py-6 bg-gray-200">
+        <header>
+            <nav class="flex justify-center items-center mt-6">
+                <div class="flex justify-center items-center mt-10 relative w-9/12 mb-10">
+                    <img class="w-48 absolute" src="assets/circle.svg" alt="">
+                    <img class="w-16 " src="assets/logo.svg" alt="">
+                </div>
+            </nav>
+        </header>
+        <!-- login section -->
+        <div class="">
+            <div class="hero-content flex-col lg:flex-row-reverse">
+              <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                <div class="card-body">
+                  <fieldset class="fieldset">
+                    <label class="fieldset-label font-bold">Mobile Number</label>
+                    <input type="number" class="input" placeholder="Type Your Number" />
+                    <label class="fieldset-label font-bold">Pin</label>
+                    <input type="password" class="input" placeholder="Type Your Pin" />
+                    <div><a class="link link-hover font-bold">Forgot Pin?</a></div>
+                    <button id="login-btn" class="btn bg-linear-to-r from-cyan-500 to-blue-500 mt-4 text-white">Login</button>
+                  </fieldset>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
+
+    <script src="script/login.js"></script>
     
 </body>
+
 </html>
