--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="bg-slate-800 outfit-font">
     <section class="max-w-md min-h-screen mx-auto py-6 bg-gray-200">
         <header>
-            <nav class="flex justify-center items-center mt-6 border-b-2">
+            <nav class="flex justify-center items-center mt-6 ">
                 <div class="flex justify-center items-center mt-10 relative w-9/12 mb-10">
                     <img class="w-48 absolute" src="assets/circle.svg" alt="">
                     <img class="w-16 " src="assets/logo.svg" alt="">
