bonus section functionality completed

--- a/main.html
+++ b/main.html
@@ -193,10 +193,10 @@
                         <fieldset class="fieldset space-y-1">
                             <label class="fieldset-label text-base text-[#080808B3] font-semibold">Enter Bonus
                                 Coupon</label>
-                            <input id="coupon" value="EID2025" type="text"
+                            <input id="coupon-code" value="EID2025" type="text"
                                 class="input font-semibold rounded-full bg-gray-200 border focus:border focus:border-[#0451AE] focus:outline-none"
                                 placeholder="Enter your coupon" required />
-                            <button id="send-btn"
+                            <button id="bonus-btn"
                                 class="rounded-full btn bg-linear-to-r from-[#57DDE4] to-[#0451AE] hover:from-[#0451AE] hover:to-[#57DDE4] mt-4 text-white">Get
                                 Bonus</button>
                         </fieldset>
@@ -273,6 +273,7 @@
     <script src="script/toggle.js"></script>
     <script src="script/cashout.js"></script>
     <script src="script/transfer-money.js"></script>
+    <script src="script/get-bonus.js"></script>
 </body>
 
 </html>
